added score count board that increases as player wins or computer wins

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
       <h2>User Choice: <span id="user-choice"></span></h2>
       <h2>Result: <span id="result"></span></h2>
 
-      <p>CLICK A BUTTON TO PLAY</p>
+      <p class="underliP">CLICK A BUTTON TO PLAY</p>
       <div class="btnDivs">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
       </div>
+
+      <p>Your Score: <span id="playerScore">0</span></p>
+      <p>Computer Score: <span id="computerScore">0</span></p>
     </main>
 
     <script src="app.js" charset="UTF-8"></script>
